<resources>
    <string name="app_name">橄榄健康DMS</string>
    <string name="text_hint_import_user_name">请输入用户名</string>
    <string name="text_hint_import_password">请输入登录密码</string>
    <string name="text_login">登录</string>
    <string name="text_register">注册</string>
    <string name="text_notice_list">公告列表</string>
    <string name="text_look_info_details">查看详情</string>
    <string name="text_notice_details">公告详情</string>
    <string name="text_product_details">商品详情</string>
    <string name="text_associated_goods">关联商品</string>
    <string name="text_product_specification">商品规格：%1$s</string>
    <string name="text_product_specification_1">商品规格：</string>
    <string name="text_product_sale_end_time">该商品促销截止时间为%1$s</string>
    <string name="text_one_key_to_join">一键加入</string>
    <string name="text_customer_service">联系客服</string>
    <string name="text_join_cart">加入购物车</string>
    <string name="text_join_cart_success">加入购物车成功</string>
    <string name="text_add_favorites">成功加入收藏</string>
    <string name="text_cancel_favorites">成功取消收藏</string>
    <string name="text_favorites">收藏</string>
    <string name="text_buy_now">立即购买</string>
    <string name="text_make_sure_order">确认订单</string>
    <string name="text_order_sure">订单确认</string>
    <string name="action_cart">购物车</string>
    <string name="action_home">首页</string>
    <string name="action_category">分类</string>
    <string name="action_my">我的</string>
    <string name="toast_back_again">再点击返回键退出</string>
    <string name="text_spec_price">特价</string>
    <string name="text_promotion">商品推荐</string>
    <string name="hint_search">搜索商品</string>
    <string name="text_sort_total">综合排序</string>
    <string name="text_sort_price">价格排序</string>
    <string name="text_sort_sale">销量排序</string>
    <string name="text_my_order">我的订单</string>
    <string name="text_refund">退货管理</string>
    <string name="text_my_favor">收藏夹</string>
    <string name="text_my_stock">我的库存</string>
    <string name="text_my_account">我的帐户</string>
    <string name="text_my_address">收货地址</string>
    <string name="text_my_address_is">收货地址：%1$s</string>
    <string name="text_my_password">修改登录密码</string>
    <string name="text_my_password_pay">重置支付密码</string>
    <string name="text_system_info">系统信息</string>
    <string name="text_waiting_pay">待付款</string>
    <string name="text_wait_receive">待收货</string>
    <string name="text_wait_send">待发货</string>
    <string name="text_order_all">全部</string>
    <string name="text_order_complete">已完成</string>
    <string name="text_order_cancel">已取消</string>
    <string name="title_apply_refund">申请退货</string>
    <string name="text_refund_apply">退货申请</string>
    <string name="text_refund_list">退货单</string>
    <string name="text_category_eat">食品</string>
    <string name="text_category_electronic">电子器械</string>
    <string name="text_category_packing">包材</string>
    <string name="text_category_daily">日用品</string>
    <string name="text_category_all">全部</string>
    <string-array name="array_category">
        <item>@string/text_category_eat</item>
        <item>@string/text_category_electronic</item>
        <item>@string/text_category_packing</item>
        <item>@string/text_category_daily</item>
        <item>@string/text_category_all</item>

    </string-array>
    <string-array name="array_my">
        <item>@string/text_my_order</item>
        <item>@string/text_refund</item>
        <item>@string/text_my_favor</item>

        <item>@string/text_my_stock</item>
        <item>@string/text_my_account</item>

        <item>@string/text_my_address</item>
        <item>@string/text_my_password</item>
        <item>@string/text_my_password_pay</item>

        <item>@string/text_system_info</item>
    </string-array>
    <string name="text_go_pay">去支付</string>
    <string name="text_go_refund_money">去还款</string>
    <string name="text_pay">支付</string>
    <string name="text_cancel_order">取消订单</string>
    <string name="text_action_edit">编辑</string>
    <string name="text_action_delete">删除</string>
    <string name="text_default_address">默认地址</string>
    <string name="text_set_default_address">设为默认</string>
    <string name="text_add_new_address">添加新地址</string>
    <string name="title_manager_address">管理收货地址</string>
    <string name="text_receiver_name">收货人</string>
    <string name="text_receiver_name_">收货人：%1$s</string>
    <string name="text_phone">手机号</string>
    <string name="text_phone_">手机号：%1$s</string>
    <string name="text_area">所在地区</string>
    <string name="text_address_detail_">地址：%1$s</string>
    <string name="text_choose">请选择</string>
    <string name="text_address_detail">详细地址</string>
    <string name="text_save">保存</string>
    <string name="text_street">街道</string>
    <string name="title_add_new_address">新增收货地址</string>
    <string name="title_edit_address">编辑收货地址</string>
    <string name="text_make_sure_delete_address">确认删除该地址吗？</string>
    <string name="title_pay_order">订单支付</string>
    <string name="title_refund_goods_and_money">退款退货</string>
    <string name="text_order_created">订单已生成！</string>
    <string name="text_order_number">订单编号：%1$s</string>
    <string name="text_order_price">订单金额</string>
    <string name="text_order_price_1">订单金额：</string>
    <string name="text_refund_price">退款金额：</string>
    <string name="text_pay_by_account_vacancies">账户余额付款（%1$s）</string>
    <string name="text_pay_by_account_vacancies_1">账户余额付款</string>
    <string name="text_input_price">请输入付款金额</string>
    <string name="text_need_refund_price">还需还款金额</string>
    <string name="text_need_pay">还需要支付:</string>
    <string name="text_pay_way">支付方式</string>
    <string name="text_need_pay_price">需支付</string>
    <string name="text_choose_way_for_pay">，请选择支付方式</string>
    <string name="text_forget_password">忘记密码</string>
    <string name="text_notice_pay_password_error">支付密码错误！</string>
    <string name="text_notice_urge_pay">请尽快完成支付</string>
    <string name="text_pay_now">立即支付</string>
    <string name="text_back_cart">返回购物车</string>
    <string name="text_already_pay">您已经付款成功</string>
    <string name="text_pay_failed">付款失败</string>
    <string name="text_pay_detail">付款详情</string>
    <string name="text_input_account_pay_password">请输入账户支付密码</string>
    <string name="text_make_sure_pay">确定付款</string>
    <string name="text_bank_pay">%1$s卡支付</string>
    <string name="text_ali_pay">支付宝支付</string>
    <string name="text_wei_pay">微信支付</string>
    <string name="text_make_sure_receive">确认收货</string>
    <string name="text_pay_order_amount">实付款：%1$s</string>
    <string-array name="array_bank_pay">
        <item>中国银行</item>
        <item>中国工商银行</item>
        <item>建设银行</item>
    </string-array>
    <string-array name="array_fixation_pay">
        <item>@string/text_wei_pay</item>
        <item>@string/text_ali_pay</item>
    </string-array>
    <string name="title_find_password">找回密码</string>
    <string name="title_modify_password">修改密码</string>
    <string name="text_digits_number">1234567890</string>
    <string name="text_digits_price">1234567890.</string>
    <string name="text_digits">1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="text_input_phone_or_username">请输入手机号或账号</string>
    <string name="text_input_code">请输入验证码</string>
    <string name="text_input_password">请输入密码</string>
    <string name="text_input_password_again">请再次输入密码</string>
    <string name="text_input_old_password">原登录密码</string>
    <string name="text_input_new_password">新登录密码</string>
    <string name="text_make_sure_modify_password">确认修改</string>
    <string name="text_reset_pay_number">重置支付密码</string>
    <string name="btn_resend_count">%1$s s后重新获取</string>
    <string name="text_commit">提交</string>
    <string name="text_commit_success">提交成功</string>
    <string name="text_order_list_info_number">共%1$s件商品，实付：</string>
    <string name="text_products_total_number">共 %1$s 件商品</string>
    <string name="text_products_total_money">共 %1$s 件商品,合计</string>
    <string name="text_send_code">发送验证码</string>
    <string name="title_check_result">审核结果</string>
    <string name="text_contact_service">联系客服</string>
    <string name="text_look_check_result">查看审核结果</string>
    <string name="text_look_refund_check_remark">注：我们将在确认收到你的退货之后尽快退款。请你尽快将商品退回</string>
    <string name="text_make_sure_result">确认结果</string>
    <string name="text_check_remark">审核备注</string>
    <string name="text_choose_goods_for_refund">选择退货商品</string>
    <string name="text_refund_reason">退货原因</string>
    <string name="text_refund_reason_nothing">无</string>
    <string name="text_refund_describe">退货描述</string>
    <string name="text_refund_describe_hint">请输入退货描述</string>
    <string name="text_refund_photo">退货照片</string>
    <string name="text_refund_no_describe">暂无描述</string>
    <string name="text_refund_wait_check">待审核</string>
    <string name="text_refund_pass_check">审核通过</string>
    <string name="text_refund_not_pass_check">审核未通过</string>
    <string name="text_refund_check_note">【订单审核备注】%1$s</string>
    <string name="text_photo">拍照</string>
    <string name="text_choose_photo">从手机相册选择</string>
    <string name="text_cancel">取消</string>
    <string name="text_reason_1">七天无理由退货</string>
    <string name="text_reason_2">货物破损退货</string>
    <string name="text_reason_3">货物临近过期无法出售</string>
    <string name="text_goods_stock">商品库存：</string>
    <string name="text_number_in_goods">进货量：%1$s</string>
    <string name="text_number_out_goods">销售量：%1$s</string>
    <string name="title_my_account">我的账户</string>
    <string name="text_account_number">账户（%1$s）</string>
    <string name="text_account_balance">账户余额</string>
    <string name="text_account_consume_money">消费总金额</string>
    <string name="text_account_debt">欠款</string>
    <string name="text_refund_money">还款</string>
    <string name="title_refund_money_detail">欠款明细</string>
    <string name="title_consume_detail">消费明细</string>
    <string name="title_order_detail">订单详情</string>
    <string name="text_order_status">订单状态：</string>
    <string name="text_order_source">订单来源：%1$s</string>
    <string name="text_buy_again">再次购买</string>
    <string name="text_price_total">共：%1$s</string>
    <string name="text_service_agreement">服务协议</string>
    <string name="text_version_message">版本信息</string>
    <string name="text_about_us">关于我们</string>
    <string name="title_system_message">系统信息</string>
    <string name="title_pay_failed">支付失败</string>
    <string name="title_pay_failed_by_wei">微信支付失败</string>
    <string name="title_pay_cancel">您取消了本笔订单支付！</string>
    <string name="text_need_refund_money">还需还款金额</string>
    <string name="text_exit">退出登录</string>
    <string name="text_sure">确认</string>
    <string name="message_no_more">没有消息了</string>
    <string name="message_input_username_or_password">请输入账号和密码</string>
    <string name="message_input_search_key_word">请输入搜索关键字</string>
    <string name="message_add_cart_min_number">不能小于订单基数，基数为：%1$s</string>
    <string name="message_product_valid_number">商品数量必须为基数的倍数，基数为：%1$s</string>
    <string name="message_not_choose_product">请选择要买的商品</string>
    <string name="message_delete_success">删除成功</string>
    <string name="message_login_invalid">登录已经过期</string>
    <string name="message_products_count_can_not_is_1">商品数量不能为1</string>
    <string name="message_products_count_can_not_is_0">商品数量不能为0</string>
    <string name="message_input_valid_mobile">请输入有效账号</string>
    <string name="message_input_valid_code">请输入有效验证码</string>
    <string name="message_input_password">请输入密码</string>
    <string name="message_password_length_more_than_six">密码长度大于6</string>
    <string name="message_password_not_same">密码不一致</string>
    <string name="message_old_password_error">原密码错误</string>
    <string name="message_send_code_success">请求验证码成功</string>
    <string name="message_info_is_valid">信息有效</string>
    <string name="message_modify_success">修改成功</string>
    <string name="message_perfect_info">请完善信息</string>
</resources>