<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <com.biz.widget.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:digits="@string/text_digits_number"
            android:hint="@string/text_input_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="4dp"
            android:singleLine="true"
            android:textColorHint="@color/color_hint"
            android:textSize="16dp"
            app:met_floatingLabelText="@string/text_input_phone_or_username" />

        <com.biz.widget.MaterialEditText
            android:id="@+id/again_password"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:digits="@string/text_digits_number"
            android:hint="@string/text_input_password_again"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="4dp"
            android:singleLine="true"
            android:textColorHint="@color/color_hint"
            android:textSize="16dp"
            app:met_floatingLabelText="@string/text_input_code" />


        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/btn_red_rect_selector"
            android:gravity="center"
            android:text="@string/text_commit"
            android:textColor="@color/white"
            android:textSize="@dimen/big_font_16dp" />

    </LinearLayout>
</LinearLayout>