<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingRight="30dp"
    android:paddingLeft="30dp"
    android:paddingTop="16dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/send_code_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:text="验证码已发送至  12345678911"
        android:textColor="@color/color_333333"
        android:visibility="gone"
        android:textSize="16dp"/>


    <RelativeLayout
        android:id="@+id/code_layout"
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <com.biz.widget.MaterialEditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:digits="@string/text_digits_number"
            android:hint="@string/text_input_code"
            android:inputType="textEmailAddress"
            android:maxLength="6"
            android:paddingLeft="4dp"
            android:singleLine="true"
            android:textColorHint="@color/color_hint"
            android:textSize="16dp"
            app:met_floatingLabelText="@string/text_input_code" />

        <include layout="@layout/fragment_merge_code_black_layout"/>
    </RelativeLayout>


    <com.biz.widget.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:digits="@string/text_digits_number"
        android:hint="@string/text_reset_pay_number"
        android:inputType="numberPassword"
        android:maxLength="11"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textColorHint="@color/color_hint"
        android:textSize="16dp"
        app:met_floatingLabelText="@string/text_input_phone_or_username" />

    <com.biz.widget.MaterialEditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:digits="@string/text_digits_number"
        android:hint="@string/text_input_password_again"
        android:inputType="numberPassword"
        android:maxLength="11"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textColorHint="@color/color_hint"
        android:textSize="16dp"
        app:met_floatingLabelText="@string/text_input_phone_or_username" />

    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/btn_red_rect_selector"
        android:gravity="center"
        android:text="@string/text_commit"
        android:textColor="@color/white"
        android:textSize="@dimen/big_font_16dp" />

</LinearLayout>