<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:orientation="vertical">

    <com.biz.widget.MaterialEditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:digits="@string/text_digits_number"
        android:hint="@string/text_input_phone_or_username"
        android:inputType="textEmailAddress"
        android:maxLength="11"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textColorHint="@color/color_hint"
        android:textSize="16dp"
        app:met_floatingLabelText="@string/text_input_phone_or_username" />

    <RelativeLayout
        android:id="@+id/code_layout"
        android:layout_width="match_parent"
        android:layout_height="58dp">

        <com.biz.widget.MaterialEditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:digits="@string/text_digits_number"
            android:hint="@string/text_input_code"
            android:inputType="textEmailAddress"
            android:maxLength="6"
            android:paddingLeft="4dp"
            android:singleLine="true"
            android:textColorHint="@color/color_hint"
            android:textSize="16dp"
            app:met_floatingLabelText="@string/text_input_code" />

        <include layout="@layout/fragment_merge_code_black_layout" />
    </RelativeLayout>

    <com.biz.widget.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:digits="@string/text_digits_number"
        android:hint="@string/text_input_old_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textColorHint="@color/color_hint"
        android:textSize="16dp"
        app:met_floatingLabelText="@string/text_input_phone_or_username" />

    <com.biz.widget.MaterialEditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:digits="@string/text_digits_number"
        android:hint="@string/text_input_new_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="4dp"
        android:singleLine="true"
        android:textColorHint="@color/color_hint"
        android:textSize="16dp"
        app:met_floatingLabelText="@string/text_input_code" />


    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/btn_red_rect_selector"
        android:gravity="center"
        android:text="@string/text_make_sure_modify_password"
        android:textColor="@color/white"
        android:textSize="@dimen/big_font_16dp" />

</LinearLayout>