<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/text_order_created"
        android:textColor="@color/base_color"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/text_order_number"
        android:textColor="@color/dark_gray" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/order_number"
        android:layout_marginTop="10dp"
        android:background="@drawable/divider_line"
        android:padding="1dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/text_order_price"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/divider1"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/text_order_price"
        android:textColor="@color/red_light"
        android:textSize="16dp"
        tools:text="￥345.23" />

    <RelativeLayout
        android:id="@+id/ll"
        android:layout_below="@id/price"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/account_vacancies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_pay_by_account_vacancies"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_centerVertical="true"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/input_account_vacancies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="@string/text_input_price"
            android:layout_centerVertical="true"
            android:background="@null"
            android:padding="0dp"
            android:layout_marginRight="8dp"
            android:textSize="16dp"/>

    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/ll"
        android:layout_marginTop="10dp"
        android:background="@drawable/divider_line"
        android:padding="1dp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/text_need_pay"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/need_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/text3"
        android:textColor="@color/red_light"
        android:textSize="16dp"
        tools:text="￥12343.2321" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/need_pay"
        android:text="@string/text_choose_way_for_pay"
        android:textSize="16dp" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/text3"
        android:layout_marginTop="10dp"
        android:background="@drawable/divider_line"
        android:padding="1dp" />


</RelativeLayout>