<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/vector_close_pay" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:text="@string/text_pay_detail" />

    <TextView
        android:id="@+id/user_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        tools:text="账户 (2345321345)" />

    <TextView
        android:id="@+id/text_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title"
        android:layout_marginTop="16dp"
        android:text="@string/text_forget_password"
        android:textColor="@color/dark_gray"
        android:textSize="16dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_number"
        android:visibility="visible">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_pay_way"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/pay_way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="16dp"
            android:textColor="@color/color_333333"
            android:textSize="16dp"
            tools:text="账户余额" />


        <TextView
            android:id="@+id/pay_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text1"
            android:layout_marginTop="16dp"
            android:textColor="@color/color_333333"
            android:textSize="16dp"
            tools:text="￥342.23" />


        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginTop="16dp"
            android:text="@string/text_need_pay_price"
            android:textSize="16dp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_number">

        <com.jungly.gridpasswordview.GridPasswordView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_pay_way"
            android:visibility="gone"
            android:textSize="16dp" />


        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/password"
            android:textColor="@color/red_light"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:text="@string/text_notice_pay_password_error"
            android:textSize="16dp" />

    </RelativeLayout>


    <TextView
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_red_rect_selector"
        android:gravity="center"
        android:text="@string/text_go_pay"
        android:textColor="@color/white"
        android:textSize="16dp" />


</RelativeLayout>